sanger/sites/chondrocytes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chondrocytes
spec:
  selector:
    matchLabels:
      app: chondrocytes
  replicas: 1
  template:
    metadata: 
      name: chondrocytes
      labels:
        app: chondrocytes
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: chondrocytes
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/chondrocytes/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chondrocytes-limb-and-bone
spec:
  selector:
    matchLabels:
      app: chondrocytes-limb-and-bone
  replicas: 1
  template:
    metadata: 
      name: chondrocytes-limb-and-bone
      labels:
        app: chondrocytes-limb-and-bone
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: chondrocytes-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: chondrocytes-limb-and-bone
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/limb_and_bone.h5ad", "-t", "limb and bone", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "3Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chondrocytes-sid-lawrence-bone-atlas
spec:
  selector:
    matchLabels:
      app: chondrocytes-sid-lawrence-bone-atlas
  replicas: 1
  template:
    metadata: 
      name: chondrocytes-sid-lawrence-bone-atlas
      labels:
        app: chondrocytes-sid-lawrence-bone-atlas
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: chondrocytes-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: chondrocytes-sid-lawrence-bone-atlas
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/sid_lawrence_bone_atlas.h5ad", "-t", "Sid Lawrence Bone Atlas", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "3Gi"
            cpu: 1
---
