sanger/sites/chondrocytes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chondrocytes
  labels:
    app: chondrocytes
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: chondrocytes
---
apiVersion: v1
kind: Service
metadata:
  name: chondrocytes-limb-and-bone
  labels:
    app: chondrocytes-limb-and-bone
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: chondrocytes-limb-and-bone
---
