sanger/sites/chondrocytes/ingress.yaml

apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: chondrocytes
spec:
  virtualhost:
    fqdn: chondrocytes.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: chondrocytes
          port: 80
    - match: /static
      services:
        - name: chondrocytes-limb-and-bone
          port: 80
    - match: /limb-and-bone
      prefixRewrite: "/" 
      services:
        - name: chondrocytes-limb-and-bone
          port: 80

---
